# agent-loop-cli

./: .gitignore  LICENSE  README.md  progress.txt  pyproject.toml
benchmarks/: README.md  baseline_runner.py  binary_search.yaml  compare.py  manuscript_polish.yaml  manuscript_polish_staged.yaml  n_queens.yaml  palindrome.yaml  palindrome_hard.yaml  readme_pair.yaml  sort_tuning.yaml  v013_staged_demo.yaml
docs/: architecture.md  plan-local-optima.md  plan-loop-weaknesses.md  plan-tdd-integration.md  plan-v0.1.md  plan-v0.2.md  plan-v0.3.md  plan-v0.4.md  plan-v0.5.md
src/agent_loop/: auto_rubric.py  cli.py  config.py  context.py  judge_engine.py  models.py  orchestrator.py  patch_engine.py  stagnation.py  state.py  strategy_engine.py  subtask_verify.py  verify_engine.py  verify_types.py  workers.py
src/agent_loop/evaluators/: __init__.py  ast_grep.py  benchmark.py  llm_rubric.py  pytest_runner.py
src/agent_loop/mcp/: __init__.py  handlers.py  protocol.py  server.py
src/agent_loop/prompts/: implement.md  judge.md  plan.md  research.md  verify.md
tests/: e2e_mcp_live_run.py  e2e_mcp_subprocess.py  test_auto_rubric.py  test_auto_rubric_e2e.py  test_claude_cli.py  test_cli.py  test_cli_timeout.py  test_codex_cli.py  test_context.py  test_context_e2e.py  test_cross_task.py  test_cross_task_e2e.py  test_cursor_cli.py  test_evaluators.py  test_gemini_cli.py  test_judge_always_llm.py  test_judge_engine.py  test_judge_prior_cycles.py  test_mcp_cli.py  test_mcp_handlers.py  test_mcp_protocol.py  test_memory_cli.py  test_models.py  test_orchestrator.py  test_orchestrator_console.py  test_phase1_decision_log.py  test_phase1_regression_bank.py  test_phase1_stagnation.py  test_phase2_extract_subtask.py  test_phase2_subtask_verify.py  test_plan_prior_hint.py  test_state.py  test_strategy_engine.py  test_v012_fence_and_cleanup.py  test_v012_llm_rubric_file.py  test_v012_pytest_file_option.py  test_v012_workspace_files.py  test_v013_patch_engine.py  test_v013_plan_stages.py  test_v014_research_multi.py  (+9 more)
