[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-loop-cli"
dynamic = ["version"]
description = "Standalone CLI for the R→P→I→V→J agent loop with multi-model support (Anthropic / OpenAI / Gemini / Ollama via litellm + cursor / claude / gemini CLI subprocess)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "agent-loop-cli contributors" },
]
keywords = ["llm", "agent", "loop", "cli", "litellm", "multi-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9",
    "litellm>=1.40",
    "pydantic>=2",
    "rich>=13",
    "pyyaml>=6",
    "tomli>=2 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
agent-loop = "agent_loop.cli:app"

[project.urls]
Homepage = "https://github.com/dbscjf0000-web/agent-loop-cli"
Issues = "https://github.com/dbscjf0000-web/agent-loop-cli/issues"
Repository = "https://github.com/dbscjf0000-web/agent-loop-cli"

[tool.hatch.version]
path = "src/agent_loop/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_loop"]
include = ["src/agent_loop/prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
